--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.13.5",
+    "@supabase/supabase-js": "^2.47.7",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
