--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.13.5",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.7",
+    "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
